# libribrain-phoneme

./: .gitattributes  .gitignore  README.md  SaliencyMap.ipynb  constants.json  generate_layer_saliency_clustermap.py  main.py  plot_phoneme_class_distribution.py  pyproject.toml  submit.sh  viz.py  viz_pred.py
configs/phoneme/baseline/: base-config.yaml  submission.yaml
configs/phoneme/baseline-l/: base-config.yaml  search-space.yaml
configs/phoneme/baseline-lstm/: base-config.yaml
configs/phoneme/baseline-nodrop/: base-config.yaml
configs/phoneme/baseline-norm/: base-config.yaml  search-space.yaml  submission.yaml
configs/phoneme/baseline-scaled/: base-config.yaml  search-space.yaml
configs/phoneme/baseline-xl/: base-config.yaml  search-space.yaml
configs/phoneme/baseline-xl-instance-norm/: base-config.yaml  search-space.yaml
configs/phoneme/baseline-xl-transformer/: base-config.yaml
configs/phoneme/megt-instance-norm/: base-config.yaml
configs/phoneme/megt-s/: base-config.yaml  search-space.yaml
distribution_mapper/: distribution_mapper.py  mapper_model.pth  predict.py
examples/: ChannelDist.ipynb  ClassDist.ipynb  ConfusionMatrix.ipynb  Discriminator.ipynb  DistBySession.ipynb  PhonemeClassification.ipynb  StdThenAvg.ipynb  Submission.ipynb  VisualizeModel.ipynb  VisualizeModelHoldout.ipynb
libribrain_experiments/: grouped_dataset.py  hpo.py  predict.py  utils.py  val.py
meta_learning/: meta_learning.py  predict.py
teacher_student/: teacher-student.py
tests/: test_configurable_instance_norm.py  test_generate_layer_saliency_clustermap.py
(+26 files in other folders)
